dropdown pages done

--- a/academy.html
+++ b/academy.html
@@ -253,7 +253,7 @@
                                 <li><a href="wdf.html">Web Design Frontend</a></li>
                                 <li><a href="pd.html">Product Design (UI/UX)</a></li>
                                 <li><a href="#">Data Science</a></li>
-                                <li><a href="#">Python</a></li>
+                                <li><a href="python.html">Python</a></li>
                             </ul>
                         </div>
                         <div class="col-md-3">
