--- a/kc.html
+++ b/kc.html
@@ -37,7 +37,8 @@
                                     href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="academy.html">The Academy</a>
+                                <a class="nav-link" href="academy.html">The
+                                    Academy</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Courses</a>
@@ -71,11 +72,11 @@
                         <div class="col-md-6">
                             <div class="txt">
                                 <p>Courses</p>
-                                <h1>Web Design Frontend</h1>
+                                <h1>Kiddies Coding</h1>
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <img src="images/wdf-images/Frontend.png"
+                            <img src="images/kc-images/Layer 1.png"
                                 alt="banner">
                         </div>
                     </div>
@@ -90,20 +91,19 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-5 col-lg-6 txt">
-                        <h5>Do you want to bridge a gap in your web skills?</h5>
-                        <p>Come let's show you how to get your hands on HTML,
-                            CSS, BOOTSTRAP, WORDPRESS, and other web tools. This
-                            is an intensive web design training programme,
-                            designed to cover all the areas that you will need
-                            in your web design and development career. We will
-                            also show you how to source materials to improve
-                            your personal development. At the end of the
-                            programme, you will be efficient with writing your
-                            HTML codes, styling your pages using Bootstrap,
-                            registering your domain names and hosting it. You
-                            also have the opportunity to join the network of
-                            developers that we outsource projects to. Come and
-                            start a career from what you will be learning.</p>
+                        <h5>Do you want to position your kids for the
+                            numerous opportunities that lie in the future?</h5>
+                        <p>Anyone who wants to thrive in today's workforce and
+                            in the future must possess adequate digital skills.
+                            At Aledoy Academy, we prepare your kids for the
+                            future by moulding their minds in line with
+                            technology. We teach kids how to write codes and
+                            build real-time projects in a fun and engaging way.
+                            As kids love to play games, we first teach them how
+                            to build their own iterations of the games they love
+                            to play. This way, they can easily translate their
+                            knowledge into creating solutions to other real-life
+                            problems.</p>
                     </div>
 
                     <div class="col-md-7 col-lg-6">
@@ -112,42 +112,34 @@
                             <div class="row">
                                 <div class="col-6 col-md-4">
                                     <div class="bx one sp">
-                                        <p>Design your website layout using
-                                            Figma</p>
+                                        <p>Introduction to
+                                            Scratch</p>
                                     </div>
                                 </div>
                                 <div class="col-6 col-md-4">
                                     <div class="bx red two sp">
-                                        <p>Convert your design to code using
-                                            HTML</p>
+                                        <p>Designing and
+                                            programming
+                                            Scratch games</p>
                                     </div>
                                 </div>
                                 <div class="col-6 col-md-4 mb-4">
                                     <div class="bx three">
-                                        <p>Add styles to your codes using CSS &
-                                            Bootstrap</p>
+                                        <p>How a website
+                                            works</p>
                                     </div>
                                 </div>
 
                                 <div class="col-6 col-md-4">
                                     <div class="bx four sp">
-                                        <p>Add effects to your
-                                            website layout using
-                                            Javascript</p>
+                                        <p>Domain names
+                                            and hosting</p>
                                     </div>
                                 </div>
                                 <div class="col-6 col-md-4">
                                     <div class="bx red five sp">
-                                        <p>Build user interfaces
-                                            for applications
-                                            using React JS</p>
-                                    </div>
-                                </div>
-                                <div class="col-6 col-md-4">
-                                    <div class="bx six">
-                                        <p>Register your
-                                            domain name and
-                                            host your website</p>
+                                        <p>Basic & Advanced
+                                            CSS rules</p>
                                     </div>
                                 </div>
                             </div>
@@ -164,47 +156,61 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                        <h4>This training is for:</h4>
+                        <h4>First Module (Starting from Scratch)</h4>
                         <ol>
-                            <li> Young school leavers who aim to position
-                                themselves for the numerous opportunities that
-                                are embedded in the world of tech</li>
-                            <li> Young graduates who seek a career path as a web
-                                developer, software developer or as a full-stack
-                                developer</li>
-                            <li> Employed individuals who need a side
-                                hustle</li>
-                            <li>Unemployed or underemployed youths who feel
-                                stuck and would like to delve into a new career
-                                path</li>
-                            <li> Innovators and entrepreneurs who seek the
-                                necessary skills to help them build new products
-                                and take these products to market sooner and
-                                more effectively</li>
-                            <li> Business leaders who seek insights on how to
-                                automate their manual processes</li>
-                            <li> Individuals who aim to position themselves as a
-                                brand and would like to make their services
-                                visible to potential clients</li>
-                            <li> Young business owners who want to harness the
-                                opportunity the world wide web has to offer for
-                                their business.</li>
-                            <li>Innovators whose designers are never really able
-                                to replicate the ideas they envision.</li>
+                            <li> Introduction to digital storytelling and
+                                creative programming</li>
+                            <li> Familiarizing with the Scratch interface and
+                                creating first projects</li>
+                            <li> Events, sequences and loops</li>
+                            <li> Introduction to the x-y coordinate system in
+                                Scratch</li>
+                            <li> Introduction to conditionals, parallelism and
+                                objects</li>
+                            <li> Introduction to Boolean operators</li>
+                            <li> Variables</li>
                         </ol>
                     </div>
                     <div class="col-md-6">
-                        <h4>Bonus Courses</h4>
+                        <h4>Second Module</h4>
                         <ol>
-                            <li>How to use add-on domains</li>
-                            <li> How to set up and manage dedicated emails</li>
-                            <li>Participants will be awarded certificates at the
-                                completion of the training</li>
-                            <li> Participants will be exposed to internships and
-                                job opportunities</li>
-                            <li> Free support and mentorship after completion of
-                                training</li>
-                            <li>Free refresher classes for students</li>
+                            <li> Reviewing the basic computer science concepts
+                                algorithms, sequences, loops, conditionals</li>
+                            <li> Deep dive into computer science concepts such
+                                as conditionals and functions</li>
+                            <li> Introduction to data structures like lists</li>
+                            <li> Cloning</li>
+                            <li> Designing and programming Scratch games that
+                                read real world body movements and voice
+                                input</li>
+                        </ol>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <h4>Third Module</h4>
+                        <ol>
+                            <li> How a website works</li>
+                            <li> Understanding tags and elements</li>
+                            <li> Structural and semantic markup</li>
+                            <li> How to add lists, links, images, tables,
+                                forms</li>
+                            <li> How to add video, audio</li>
+                            <li> Basic CSS rules</li>
+                            <li> Working with fonts</li>
+                            <li> Domain names and hosting</li>
+                        </ol>
+                    </div>
+                    <div class="col-md-6">
+                        <h4>Fourth Module</h4>
+                        <ol>
+                            <li> Process and Desig</li>
+                            <li> Layout</li>
+                            <li> Advanced CSS</li>
+                            <li> Basic JavaScript Instructions</li>
+                            <li> Functions, Methods and Objects</li>
+                            <li> Decisions and Loops</li>
+                            <li> Document Object Model</li>
                         </ol>
                     </div>
                 </div>
@@ -269,7 +275,7 @@
 
         <!-- wdf sec3 ends -->
 
-         <!-- last-sec starts -->
+        <!-- last-sec starts -->
 
         <div class="last-sec">
             <div class="container">
@@ -281,7 +287,7 @@
 
         <!-- last sec-ends -->
 
-          <!-- footer starts -->
+        <!-- footer starts -->
 
         <footer>
             <div class="footer-ctn">
@@ -302,8 +308,10 @@
                         <div class="col-md-2">
                             <ul>
                                 <li>Course</li>
-                                <li><a href="wdf.html">Web Design Frontend</a></li>
-                                <li><a href="pd.html">Product Design (UI/UX)</a></li>
+                                <li><a href="wdf.html">Web Design
+                                        Frontend</a></li>
+                                <li><a href="pd.html">Product Design
+                                        (UI/UX)</a></li>
                                 <li><a href="#">Data Science</a></li>
                                 <li><a href="python.html">Python</a></li>
                             </ul>
