--- a/backend.html
+++ b/backend.html
@@ -37,7 +37,8 @@
                                     href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="academy.html">The Academy</a>
+                                <a class="nav-link" href="academy.html">The
+                                    Academy</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Courses</a>
@@ -65,17 +66,19 @@
             <!-- header ends -->
 
             <!-- banner starts -->
-            <div class="wdf-banner">
+            <div class="mad-banner">
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-6">
-                            <div class="txt">
+                        <div class="col-md-5 col-lg-6 col-xl-5">
+                            <div class="txt un">
                                 <p>Courses</p>
-                                <h1>Web Design Frontend</h1>
+                                <h1>Web Development
+                                    Backend using
+                                    PHP & MYSQL</h1>
                             </div>
                         </div>
-                        <div class="col-md-6">
-                            <img src="images/wdf-images/Frontend.png"
+                        <div class="col-md-7 col-lg-6 col-xl-7">
+                            <img src="images/backend.image/5798429_2968382-ai 1.png"
                                 alt="banner">
                         </div>
                     </div>
@@ -90,20 +93,28 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-5 col-lg-6 txt">
-                        <h5>Do you want to bridge a gap in your web skills?</h5>
-                        <p>Come let's show you how to get your hands on HTML,
-                            CSS, BOOTSTRAP, WORDPRESS, and other web tools. This
-                            is an intensive web design training programme,
-                            designed to cover all the areas that you will need
-                            in your web design and development career. We will
-                            also show you how to source materials to improve
-                            your personal development. At the end of the
-                            programme, you will be efficient with writing your
-                            HTML codes, styling your pages using Bootstrap,
-                            registering your domain names and hosting it. You
-                            also have the opportunity to join the network of
-                            developers that we outsource projects to. Come and
-                            start a career from what you will be learning.</p>
+                        <h5>About Course</h5>
+                        <p>In this course, you will learn how to write codes
+                            that handle how the backend and functionality of
+                            your application works. You will learn how to send
+                            and retrieve forms and other information from
+                            databases. You would be taught how to use MySQL
+                            Database, as well as communicating with your MySQL
+                            Database using the CRUD (Create, Read, Update,
+                            Delete) approach.</p><br>
+
+                        <h4>Who this course is for:</h4>
+                        <ol>
+                            <li> Anyone who wants to start a career as a web
+                                developer or backend programmer</li>
+                            <li> Anyone who wants to learn how to build robust
+                                web-based applications</li>
+                            <li>Anyone who wants to understand how the various
+                                functionalities ofa web-based application
+                                interact with one another</li>
+                            <li>Anyone who aspires to become a full-stack
+                                developer</li>
+                        </ol>
                     </div>
 
                     <div class="col-md-7 col-lg-6">
@@ -112,42 +123,40 @@
                             <div class="row">
                                 <div class="col-6 col-md-4">
                                     <div class="bx one sp">
-                                        <p>Design your website layout using
-                                            Figma</p>
+                                        <p>Create and connect
+                                            to database</p>
                                     </div>
                                 </div>
                                 <div class="col-6 col-md-4">
-                                    <div class="bx red two sp">
-                                        <p>Convert your design to code using
-                                            HTML</p>
+                                    <div class="bx red two sp wide">
+                                        <p>Build a database
+                                            driven website, with
+                                            registration, login,
+                                            authentications and
+                                            security sessions.</p>
                                     </div>
                                 </div>
                                 <div class="col-6 col-md-4 mb-4">
                                     <div class="bx three">
-                                        <p>Add styles to your codes using CSS &
-                                            Bootstrap</p>
+                                        <p>Build an
+                                            e-commerce
+                                            website</p>
                                     </div>
                                 </div>
 
                                 <div class="col-6 col-md-4">
                                     <div class="bx four sp">
-                                        <p>Add effects to your
-                                            website layout using
-                                            Javascript</p>
+                                        <p>Integrate with
+                                            external APIs and
+                                            payment systems</p>
                                     </div>
                                 </div>
                                 <div class="col-6 col-md-4">
-                                    <div class="bx red five sp">
-                                        <p>Build user interfaces
-                                            for applications
-                                            using React JS</p>
-                                    </div>
-                                </div>
-                                <div class="col-6 col-md-4">
-                                    <div class="bx six">
-                                        <p>Register your
-                                            domain name and
-                                            host your website</p>
+                                    <div class="bx red five sp wide">
+                                        <p>Build a career portal
+                                            and customised
+                                            content management
+                                            website</p>
                                     </div>
                                 </div>
                             </div>
@@ -157,61 +166,6 @@
             </div>
         </div>
         <!-- wdf-sec1 ends -->
-
-        <!-- wdf sec2 starts -->
-
-        <div class="wdf-sec2">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6">
-                        <h4>This training is for:</h4>
-                        <ol>
-                            <li> Young school leavers who aim to position
-                                themselves for the numerous opportunities that
-                                are embedded in the world of tech</li>
-                            <li> Young graduates who seek a career path as a web
-                                developer, software developer or as a full-stack
-                                developer</li>
-                            <li> Employed individuals who need a side
-                                hustle</li>
-                            <li>Unemployed or underemployed youths who feel
-                                stuck and would like to delve into a new career
-                                path</li>
-                            <li> Innovators and entrepreneurs who seek the
-                                necessary skills to help them build new products
-                                and take these products to market sooner and
-                                more effectively</li>
-                            <li> Business leaders who seek insights on how to
-                                automate their manual processes</li>
-                            <li> Individuals who aim to position themselves as a
-                                brand and would like to make their services
-                                visible to potential clients</li>
-                            <li> Young business owners who want to harness the
-                                opportunity the world wide web has to offer for
-                                their business.</li>
-                            <li>Innovators whose designers are never really able
-                                to replicate the ideas they envision.</li>
-                        </ol>
-                    </div>
-                    <div class="col-md-6">
-                        <h4>Bonus Courses</h4>
-                        <ol>
-                            <li>How to use add-on domains</li>
-                            <li> How to set up and manage dedicated emails</li>
-                            <li>Participants will be awarded certificates at the
-                                completion of the training</li>
-                            <li> Participants will be exposed to internships and
-                                job opportunities</li>
-                            <li> Free support and mentorship after completion of
-                                training</li>
-                            <li>Free refresher classes for students</li>
-                        </ol>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- wdf sec2 ends -->
 
         <!-- wdf sec3 starts -->
 
@@ -269,7 +223,7 @@
 
         <!-- wdf sec3 ends -->
 
-         <!-- last-sec starts -->
+        <!-- last-sec starts -->
 
         <div class="last-sec">
             <div class="container">
@@ -281,7 +235,7 @@
 
         <!-- last sec-ends -->
 
-          <!-- footer starts -->
+        <!-- footer starts -->
 
         <footer>
             <div class="footer-ctn">
@@ -302,8 +256,10 @@
                         <div class="col-md-2">
                             <ul>
                                 <li>Course</li>
-                                <li><a href="wdf.html">Web Design Frontend</a></li>
-                                <li><a href="pd.html">Product Design (UI/UX)</a></li>
+                                <li><a href="wdf.html">Web Design
+                                        Frontend</a></li>
+                                <li><a href="pd.html">Product Design
+                                        (UI/UX)</a></li>
                                 <li><a href="#">Data Science</a></li>
                                 <li><a href="python.html">Python</a></li>
                             </ul>
