--- a/pd.html
+++ b/pd.html
@@ -282,7 +282,7 @@
                                         Frontend</a></li>
                                 <li><a href="pd.html">Product Design (UI/UX)</a></li>
                                 <li><a href="#">Data Science</a></li>
-                                <li><a href="#">Python</a></li>
+                                <li><a href="python.html">Python</a></li>
                             </ul>
                         </div>
                         <div class="col-md-3">
